--- a/test.html
+++ b/test.html
@@ -161,6 +161,17 @@
         tween.setProgress(this.value/1000);
       });
 
+      // var el = {};
+      // var deltas = new mojs.__helpers__.Deltas({
+      //   el: el,
+      //   x: { 200: 300 },
+      //   y: { 10: 0 },
+      //   duration: 2000,
+      //   onUpdate(ep, p, isForward) {
+      //     console.log(`ep: ${ep}`, el);
+      //   }
+      // })._tween.play();
+
     </script>
 
   </body>
