[tweenable]: initial commit

--- a/test.html
+++ b/test.html
@@ -179,7 +179,7 @@
       //   onUpdate(ep, p, isForward) {
       //     console.log(`ep: ${ep}`, el);
       //   }
-      // })._tween.play();
+      // }).play();
 
     </script>
 
