[path easing]: initial commit

--- a/test.html
+++ b/test.html
@@ -234,7 +234,7 @@
     <script src="vendor/platform.js"></script>
     <script src="vendor/benchmark.js"></script>
 
-    <script>
+    <!-- <script>
       var suite = new Benchmark.Suite;
       // add tests
       suite.add('path sampling', function() {
@@ -252,7 +252,7 @@
       })
       // run async
       .run({ 'async': true });
-    </script>
+    </script> -->
 
   </body>
 </html>
