--- a/test.html
+++ b/test.html
@@ -61,34 +61,50 @@
         setTimeout( () => {
           var el = document.querySelector('#js-el');
 
-          var deltas = new mojs.Deltas({
-            el: {},
-            duration: 4000,
+          const html = new mojs.Html({
+            el: '#js-el',
             x: { 0: 200 },
-            angle: { 0: 180, easing: 'cubic.out' },
-            // z: { 200: 0 },
-            // opacity: { 1: 0, duration: 6000 },
-            // backgroundColor: { 'cyan': 'orange', duration: 6000 },
+            k: { 0: 20 },
+            duration: 2000,
             customProperties: {
-              render: function (props, supportProps) {
-
-                console.log(supportProps);
-
-                el.style.transform = `translateX(${supportProps.x}px) rotate(${supportProps.angle}deg)`;
-                // el.style.opacity = props.opacity;
-              },
-              angle: {
+              k: {
                 type: 'number',
                 isSkipRender: true
               },
-              x: {
-                type: 'number',
-                isSkipRender: true
+              render() {
+                // console.log(arguments[0], arguments[1].k);
               }
             }
-          });
+          }).play();
 
-          deltas.play();
+          // var deltas = new mojs.Deltas({
+          //   el: {},
+          //   duration: 4000,
+          //   x: { 0: 200 },
+          //   angle: { 0: 180, easing: 'cubic.out' },
+          //   // z: { 200: 0 },
+          //   // opacity: { 1: 0, duration: 6000 },
+          //   // backgroundColor: { 'cyan': 'orange', duration: 6000 },
+          //   customProperties: {
+          //     render: function (props, supportProps) {
+          //
+          //       console.log(supportProps);
+          //
+          //       el.style.transform = `translateX(${supportProps.x}px) rotate(${supportProps.angle}deg)`;
+          //       // el.style.opacity = props.opacity;
+          //     },
+          //     angle: {
+          //       type: 'number',
+          //       isSkipRender: true
+          //     },
+          //     x: {
+          //       type: 'number',
+          //       isSkipRender: true
+          //     }
+          //   }
+          // });
+          //
+          // deltas.play();
         }, 2000 );
       });
 
