[surface]: working on surface

--- a/test.html
+++ b/test.html
@@ -39,24 +39,15 @@
     <script src="vendor/mojs-player.js"></script>
 
     <script>
-      const html = new mojs.Html({
-        el: '#js-el',
-        // k: { 0: 20 },
-        // x: { '0%': '500%' },
-        angle: { '0deg': '360deg' },
-        duration: 2000,
-        // customProperties: {
-        //   k: {
-        //     type: 'number',
-        //     isSkipRender: true
-        //   },
-        //   render(style, support) {
-        //     console.log(style.transform);
-        //   }
-        // }
-      });
-
-      new MojsPlayer({ add: html });
+      // const surface = new mojs.Surface({
+      //   x: { 0: 1200 },
+      //   // angle: { 0: 360 },
+      //   scaleX: { 1: 4 },
+      //   duration: 2000
+      // });
+      //
+      // surface.el.style.background = 'deeppink';
+      // new MojsPlayer({ add: surface });
     </script>
 
     <br />
