--- a/test.html
+++ b/test.html
@@ -38,17 +38,31 @@
 
     <script src="vendor/mojs-player.js"></script>
 
-    <script>
-      // const surface = new mojs.Surface({
-      //   x: { 0: 1200 },
-      //   // angle: { 0: 360 },
-      //   scaleX: { 1: 4 },
-      //   duration: 2000
-      // });
-      //
-      // surface.el.style.background = 'deeppink';
-      // new MojsPlayer({ add: surface });
-    </script>
+    <!-- <script>
+      const SurfaceStagger = mojs.stagger(mojs.Surface);
+
+      const surface = new SurfaceStagger({
+        items: 5,
+        // x: { 0: 700 },
+        position: 'absolute',
+        background: ['cyan', 'deeppink', 'yellow', 'purple', '#222'],
+        y: 'stagger(25px)',
+        is3d: true,
+        left: '50%',
+        top: '50%',
+        marginLeft: '-50px',
+        marginTop: '-100px',
+        // borderRadius: { 0: '50px' },
+        borderRadius: '25px',
+        delay: 'stagger(50)',
+        angleX: { 0: 360 },
+        angleY: { 0: 360 },
+        angleZ: { 0: 360 },
+        duration: 2000
+      });
+
+      new MojsPlayer({ add: surface });
+    </script> -->
 
     <br />
     <br />
