[mojs, stagger]: add random and stagger fucntions

--- a/test.html
+++ b/test.html
@@ -131,12 +131,17 @@
     <script src="http://hammerjs.github.io/dist/hammer.min.js"></script>
 
     <script>
-      var path1 = document.querySelector('#js-path1');
-      var path2 = document.querySelector('#js-path2');
 
-      var pathGen = document.querySelector('#js-path-gen');
-      var d = mojs.generatePath();
-      pathGen.setAttribute('d', d);
+      // var pathGen = document.querySelector('#js-path-gen');
+      // var d = mojs.generatePath({
+      //   x: 250,
+      //   y: 250,
+      //   xDumpEasing: 'sin.out',
+      //   yDumpEasing: 'sin.in',
+      //   isGrow: false,
+      //   count: 3
+      // });
+      // pathGen.setAttribute('d', d);
       
     </script>
 
